@@ -1,4 +1,10 @@
 2013-04-04  Dirk Schulze  <dschulze@adobe.com>
+	Update references to SVG2 and CSS Exclusions.
+
+2013-04-04  Dirk Schulze  <dschulze@adobe.com>
+	Reference value definitions of CSS Background and Borders.
+
+2013-04-04  Dirk Schulze  <dschulze@adobe.com>
 	Change titles from Mask to Layered Masks and Mask Box Image to Box-Image Masks.
 
 2013-04-03  Dirk Schulze  <dschulze@adobe.com>
